hphp/hack/test/typecheck/invariant_return.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

function foo(): int { return invariant(1, ""); }
function foo2(): bool { return invariant(true, ""); }
